--- a/css/styles.css
+++ b/css/styles.css
@@ -25,9 +25,6 @@ header{
     justify-content: space-between;
     width: 100%;
 }
-form{ 
-    align-items: flex-start;
-}
 .header, a{
     letter-spacing: 2px;
     word-spacing: 2px;
@@ -36,7 +33,6 @@ form{
 }
 input, button{
     font-family: 'Josefin Sans', sans-serif;
-    align-self: center;
     color: white;
     margin: 1px;
     margin-top: 12px;
@@ -51,7 +47,6 @@ button{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     margin-top: 0%;
 }
@@ -64,10 +59,8 @@ button{
     word-spacing: 2px;
     color: white;
     text-decoration: none;
-    background-color: none;
     margin: 10px;
     letter-spacing: 3px;
-    text-align: right;
 }
 
 /*Footer*/
@@ -90,7 +83,6 @@ i{
 
 
 
-
 /*Home*/
 .prese {
     font-family:'Josefin Sans', sans-serif;
@@ -101,7 +93,6 @@ i{
 .presen{
     font-family:'Josefin Sans', sans-serif;
     color: white;
-    padding: 0px;
     line-height: 3px;
     margin: 5%;
     letter-spacing: 5px;    
@@ -209,7 +200,6 @@ h3 {
 .song{
     font-family:'Josefin Sans', sans-serif;
     color: white;
-    text-align: left;
     font-size: 90px;
     letter-spacing: 5px;
     margin: 30px;
@@ -230,10 +220,9 @@ h3 {
 
 /*Detail.artist*/
 .artist{
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    display: flex;
-    justify-content: flex-start;
     margin:0px;
 }
 .imgartist{
@@ -255,13 +244,11 @@ h3 {
     color: white;
     font-size: 22px;
 }
-.top{
-    margin: 6px;
-}
 .biblioteca{
     font-size: 45px;
     margin: 15px;
     text-indent: -2px;
+    margin-top: 3%;
 }
 .she3{
     margin: 8px;
@@ -282,7 +269,6 @@ h3 {
 .dom{
     font-family:'Josefin Sans', sans-serif;
     color: white;
-    text-align: left;
     font-size: 80px;
     letter-spacing: 3px;
     margin: 30px;
