--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,6 @@ form{
 input, button{
     font-family: 'Josefin Sans', sans-serif;
     align-self: center;
-    color: white;
     margin: 1px;
     margin-top: 12px;
     padding: 9px;
@@ -516,7 +515,11 @@ img{
         margin-top: 0px;
         padding: 6px;
         font-size: 12px;
-    }    
+        
+    } 
+    form {
+        margin-top: 2%;
+    }   
     .menu { 
         font-size: 15px;
         margin: 6px;
