--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ input, button{
 }
 button{
     color: black;
+    padding: 5px;
 }
 .menu{
     display: flex;
@@ -68,6 +69,14 @@ button{
     letter-spacing: 3px;
     text-align: right;
 }
+.alerta{
+    color:white;
+}
+.closeIcon{
+    display: none;
+    color: red;
+}
+
 
 /*Footer*/
 footer{
