--- a/css/styles.css
+++ b/css/styles.css
@@ -356,87 +356,15 @@ h3 {
     font-size: 100px;
     padding: 30px;
 }
-.music-play{
-    width: 100%;
-    height: 80px;
-    display: flex;
-    background-image: linear-gradient(#6c6cff, #6b3636);
-}
-img{
-    border-radius: 5%;
-}
 .music-name {
     font-family:'Josefin Sans', sans-serif;
     color: white;
     text-align:start;
 }
-.play-img img{
-    width: 70px;
-    height: 68px;
-    margin: 5px;
-    border-radius: 5px;
-}
-.play-controls{
-    width: 300px;
-    height: 60px;
-}
-.controls{
-    width: 285px;
-    height: 50px;
+.track_home{
     display: flex;
+    width: 20%;
 }
-.song-name{
-    width: 150px;
-    height: 50px;
-}
-.song-name h5{
-    margin-top: 20px;
-    margin-left: 10px;
-    font-size: 17px;
-    font-weight: normal;
-    letter-spacing: 0.5px;
-    line-height: 6px;
-}
-.song-name p{
-    font-size: 12px;
-    margin-left: 10px;
-    letter-spacing: 0.5px;
-    color: lightgrey;
-}
-.play-icon{
-    width: 150px;
-    height: 20px;
-}
-.play-icon .fa{
-    width: 30px;
-    height: 30px;
-    font-size: 13px;
-    color: black;
-    border-radius: 50px;
-    background-color: lightgrey;
-    margin: 15px 13px 0 auto;
-    padding: 9px 11px;
-    cursor: pointer;
-}
-.play-icon .fa-play{
-    background-color: white;
-}
-.music-progress{
-    width: 260px;
-    margin-left: 10px;
-}
-.music-progress .progress{
-    height: 2px !important;
-    border-radius: 0 !important;
-    background-color: lightgrey;
-}
-.music-progress .progress-bar{
-    width: 0%;
-    background-color: #6c6cff;
-    animation: width 10s infinite;
-}
-
-
 /*Search Results*/
 .result-titulo{
     color: white;
